--- a/index.html
+++ b/index.html
@@ -181,6 +181,14 @@
                     <div class="skill-category-section">
                         <h4 class="category-title">Web Technologies</h4>
                         <div class="skills-grid">
+                               <div class="skill-card">
+                                <div class="skill-image">
+                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React">
+                                </div>
+                                <div class="skill-content">
+                                    <h5>React</h5>
+                                </div>
+                            </div>
                             <div class="skill-card">
                                 <div class="skill-image">
                                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML5">
