Update LinkedIn links to include HTTPS and target

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <!-- If you don't have an image yet, uncomment the line above and comment out this img tag -->
                     </div>
                     <div class="profile-social-links">
-                        <a href="www.linkedin.com/in/sreenivasuluvedururi-b60778268" class="profile-social-link" title="LinkedIn">
+                        <a href="https://www.linkedin.com/in/sreenivasuluvedururi-b60778268/" class="profile-social-link" title="LinkedIn" target="_blank">
                             <i class="fab fa-linkedin"></i>
                         </a>
                         <a href="https://github.com/VedururiSreenivasulu" class="profile-social-link" title="GitHub">
@@ -637,7 +637,7 @@
                         </div>
                     </div>
                     <div class="social-links">
-                        <a href="www.linkedin.com/in/sreenivasuluvedururi-b60778268" class="social-link"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/sreenivasuluvedururi-b60778268/" class="social-link"target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/VedururiSreenivasulu" class="social-link"><i class="fab fa-github"></i></a>
                         <a href="https://leetcode.com/u/sreenuv/" class="social-link"><i class="fa-solid fa-code"></i></a>
                         <a href="https://www.hackerrank.com/profile/h99220041409" class="social-link"><i class="fab fa-hackerrank"></i></a>
